# snark-proof-chat

./: .env  README.md  ZK_SETUP_INSTRUCTIONS.md  index.html  package-lock.json  package.json  tailwind.config.ts
circuits/: setup.sh  tokenBalance.circom
public/zkp/: tokenBalance.wasm  tokenBalance_final.zkey  verification_key.json
solana-program/: .gitignore  Anchor.toml  README.md
solana-program/programs/zk-verifier/: Cargo.toml
solana-program/programs/zk-verifier/src/: lib.rs
src/: App.tsx  index.css  main.tsx  polyfills.ts
src/components/: ProofAnimation.tsx  ProofDetails.tsx  TerminalHeader.tsx  WalletHeader.tsx
src/components/ui/: button.tsx
src/contexts/: WalletContext.tsx
src/hooks/: usePhantomWallet.tsx  useRealtimeMessages.tsx  useTokenBalance.tsx
src/integrations/supabase/: types.ts
src/lib/: encryption.ts  solana.ts  tokenGating.ts  zkProof.ts
src/pages/: About.tsx  Admin.tsx  Chat.tsx  Index.tsx  NotFound.tsx  OnChain.tsx  UseCases.tsx
supabase/: config.toml
supabase/functions/log-to-solana/: index.ts
supabase/functions/send-message/: index.ts
supabase/functions/upload-verification-key/: index.ts
supabase/functions/verify-token-balance/: index.ts
supabase/migrations/: 20251108043904_ddfff6a7-1427-4641-9ad7-5a281fb26c52.sql  20251108052151_77aa0862-b445-4aee-878c-7d6b644662f1.sql  20251108095334_7d93086e-9eb3-41f8-97fe-c844a7520682.sql  20251108144731_569e3912-29a3-4911-a380-be84b8fece69.sql
vercel-zk-verifier/: README.md  package.json  server.js  vercel.json
vercel-zk-verifier/api/: verify.js
(+1 files in other folders)
