[package]
name = "zk-verifier"
version = "0.1.0"
description = "Solana program for ZK-SNARK proof verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
